[tool.poetry]
name = "multion"
version = "0.2.5"
description = "MULTION API"
authors = ["Div Garg"]
include = ["secrets.json"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests-oauthlib = "^1.3.1"
requests = "^2.31.0"
openai = "^0.27.8"
cryptography = "^41.0.1"
ipython = "^8.14.0"
cognitojwt = "^1.4.1"
pillow = "^10.0.1"
anon-sdk-python = "^0.1.5"

[[tool.poetry.source]]
name = "anon"
url = "https://dl.cloudsmith.io/nFuPbF5w0nZPoX3U/anon/anon-sdk/python/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
