[tool.poetry]
name = "multion"
version = "0.2.18"
description = "MULTION API"
authors = ["Div Garg"]
include = ["multion/.secrets.json, multion/*.py"]
readme = "README.md"

[tool.poetry.dependencies]
requests = "^2.31.0"
pillow = "^10.0.1"
pytesseract = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
